<resources>
    <string name="app_name">libraryApp</string>
    <string name="create">Erstellen</string>
    <string name="save">Speichern</string>
    <string name="delete">Löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="title">Titel</string>
    <string name="author">Autor</string>
    <string name="isbn">ISBN</string>
    <string name="genre">Genre</string>
    <string name="rating">Altersfreigabe</string>
    <string name="position">Standortcode</string>
    <string name="exampleTitle">Herr der Ringe</string>
    <string name="exampleAuthor">J.R.R Tolkien</string>
    <string name="exampleISBN">1234567890</string>
    <string name="exampleGenre">Fantasy</string>
    <string name="exampleRating">13</string>
    <string name="examplePosition">Regal A1</string>
    <string name="medium">Medium</string>
    <string name="mediaTable">Medientabelle</string>
    <string name="media_create">Medium erstellen</string>
    <string name="borrowTable">Ausleihetabelle</string>
    <string name="borrow_create">Ausleihe erstellen</string>
    <string name="exampleKundenId">KundenId: 1</string>
    <string name="kunde">Kunde</string>
    <string name="exampleMediumId">MediumId: 1</string>
    <string name="ausleihdauer_text">Wenn Sie den Knopf \"Verlängern\" drücken, verlängert sich die Ausleihdauer um weitere 14 Tage</string>
    <string name="name">Name</string>
    <string name="passwort">Passwort</string>
    <string name="einloggen">Einloggen</string>
    <string name="logout">Ausloggen</string>
</resources>